# AGI-buffett

./: README.md  pom.xml  restart.sh
buffett-analysis/: pom.xml
buffett-analysis/src/main/java/com/agibuffett/analysis/: AnalysisContext.java  AnalysisEngine.java  AnalysisResult.java  Analyzer.java  Main.java
buffett-analysis/src/main/java/com/agibuffett/analysis/analyzer/: FundamentalSummaryAnalyzer.java  MarketSummaryAnalyzer.java
buffett-analysis/src/main/java/com/agibuffett/analysis/rule/: Rule.java
buffett-common/: pom.xml
buffett-common/src/main/java/com/agibuffett/common/model/: DailyBar.java  DividendData.java  DividendRecord.java  FinancialStatement.java  PeriodRecord.java  StockMeta.java  WatchGroup.java  WatchItem.java  Watchlist.java
buffett-common/src/main/java/com/agibuffett/common/storage/: LocalStore.java
buffett-common/src/test/java/com/agibuffett/common/storage/: LocalStoreTest.java
buffett-web/: pom.xml
buffett-web/src/main/java/com/agibuffett/web/: StockService.java  WebServer.java  package-info.java
buffett-web/src/main/resources/web/: app.js  index.html  styles.css
data/: README.md  watchlist.json
fetcher-python/: README.md  config.yaml  pyproject.toml  requirements.txt
fetcher-python/src/agibuffett/: __init__.py  __main__.py  cli.py  config.py  storage.py  watchlist.py
fetcher-python/src/agibuffett/fetchers/: __init__.py  base.py  dividend.py  fundamental.py  market.py
