[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agibuffett-fetcher"
version = "0.1.0"
description = "AGI-Buffett 数据抓取端 (AKShare)"
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.12",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
agibuffett = "agibuffett.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
